Improved layout and corrected several data failures and miss conceptions

--- a/pages/appendix/customer-references.mdx
+++ b/pages/appendix/customer-references.mdx
@@ -35,21 +35,21 @@ Market Fit has earned the trust of leading companies across industries with our 
 ### Global Work Colombia - Directora de Operaciones
 > "Market Fit nos ayudó a entender exactamente dónde nuestros clientes se confundían en el proceso. Ahora el compliance es mucho más ágil y transparente."
 
-**Maria Rodriguez, Directora de Operaciones**  
+**Sebastian Henao, Director de Operaciones**  
 *Consultoría de Compliance*  
 *Customer since: 2023*
 
 ### Uncodie - Co-fundador
 > "The insights from Market Fit were game-changing. We finally understood where users were getting stuck and how to guide them to success."
 
-**Carlos Mendez, Co-fundador**  
+**Sergio Prado, Co-fundador**  
 *No-code Platform*  
 *Customer since: 2023*
 
 ### Galpra Contabilidad - Fundadora
 > "Market Fit nos dio la estructura que necesitábamos. Ahora podemos anticipar las necesidades de nuestros clientes y entregar reportes a tiempo, siempre."
 
-**Andrea Silva, Fundadora**  
+**Mariana Galvan, Fundadora**  
 *Servicios Contables, Celaya, México*  
 *Customer since: 2023*
 
@@ -215,17 +215,17 @@ We maintain a network of satisfied customers willing to speak with prospective c
 ### By Industry Focus
 
 #### **SaaS/Technology**
-- **Uncodie** - Carlos Mendez, Co-fundador
+- **Uncodie** - Sergio Prado, Co-fundador
   - Focus: User onboarding optimization
   - Results: 27% activation improvement
 
 #### **Professional Services**
-- **Global Work Colombia** - Maria Rodriguez, Directora de Operaciones
+- **Global Work Colombia** - Sebastian Henao, Director de Operaciones
   - Focus: Compliance process optimization
   - Results: 32% faster processing
 
 #### **Accounting/Finance**
-- **Galpra Contabilidad** - Andrea Silva, Fundadora
+- **Galpra Contabilidad** - Mariana Galvan, Fundadora
   - Focus: Workflow automation
   - Results: 41% faster delivery
 
