--- a/pages/appendix/faq.mdx
+++ b/pages/appendix/faq.mdx
@@ -1,8 +1,150 @@
 # Frequently Asked Questions
 
+<style>{`
+  .summary-table {
+    width: 100%;
+    border-collapse: collapse;
+    background: rgba(255, 255, 255, 0.05);
+    border-radius: 12px;
+    overflow: hidden;
+    backdrop-filter: blur(10px);
+    margin: 1.5rem 0;
+  }
+  
+  .summary-table td {
+    padding: 1rem 1.5rem;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  }
+  
+  .summary-table td:first-child {
+    font-weight: 600;
+    background: rgba(0, 0, 0, 0.05);
+  }
+  
+  .summary-table tr:last-child td {
+    border-bottom: none;
+  }
+  
+  .dark .summary-table {
+    background: rgba(255, 255, 255, 0.05);
+  }
+  
+  .dark .summary-table td {
+    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+  }
+  
+  .dark .summary-table td:first-child {
+    background: rgba(255, 255, 255, 0.1);
+  }
+`}</style>
+
 ## Common Investor Questions
 
 We've compiled answers to the most frequently asked questions from investors during our fundraising process.
+
+## Market & Growth Quick Facts
+
+<table className="summary-table">
+  <tbody>
+    <tr>
+      <td><strong>Market Size</strong></td>
+      <td>$25B by 2025, growing at 32% CAGR</td>
+    </tr>
+    <tr>
+      <td><strong>Serviceable Market</strong></td>
+      <td>$5.2B targeting B2B SaaS and technology firms</td>
+    </tr>
+    <tr>
+      <td><strong>Target Customers</strong></td>
+      <td>B2B SaaS, Technology Companies, Professional Services</td>
+    </tr>
+    <tr>
+      <td><strong>Growth Drivers</strong></td>
+      <td>Zero-risk entry, 28x LTV/CAC, AI improvement with scale</td>
+    </tr>
+  </tbody>
+</table>
+
+## Unit Economics Summary
+
+<table className="summary-table">
+  <tbody>
+    <tr>
+      <td><strong>CAC Range</strong></td>
+      <td>$150-$1,200 (by plan)</td>
+    </tr>
+    <tr>
+      <td><strong>LTV Range</strong></td>
+      <td>$7,900-$52,400 (by plan)</td>
+    </tr>
+    <tr>
+      <td><strong>LTV/CAC Ratio</strong></td>
+      <td>28x-160x (industry: 3-5x)</td>
+    </tr>
+    <tr>
+      <td><strong>Gross Margin</strong></td>
+      <td>85%+ (vs industry 70-80%)</td>
+    </tr>
+    <tr>
+      <td><strong>Payback Period</strong></td>
+      <td>2.5 months (industry: 12-18 months)</td>
+    </tr>
+    <tr>
+      <td><strong>Net Revenue Retention</strong></td>
+      <td>135% (growing to 172%)</td>
+    </tr>
+  </tbody>
+</table>
+
+## Technology & IP Summary
+
+<table className="summary-table">
+  <tbody>
+    <tr>
+      <td><strong>Patent Portfolio</strong></td>
+      <td>3 granted patents, 5 pending applications</td>
+    </tr>
+    <tr>
+      <td><strong>Core Technology</strong></td>
+      <td>NLP, behavioral recognition, reinforcement learning</td>
+    </tr>
+    <tr>
+      <td><strong>Security & Compliance</strong></td>
+      <td>SOC 2 Type II, GDPR, CCPA certified</td>
+    </tr>
+    <tr>
+      <td><strong>Uptime SLA</strong></td>
+      <td>99.99% with redundant infrastructure</td>
+    </tr>
+  </tbody>
+</table>
+
+## Funding & Profitability Timeline
+
+<table className="summary-table">
+  <tbody>
+    <tr>
+      <td><strong>Seed Round</strong></td>
+      <td>$2.5M SAFE note, $10M valuation cap</td>
+    </tr>
+    <tr>
+      <td><strong>Use of Funds</strong></td>
+      <td>40% Campaign Fund, 30% Partner Network, 20% GTM, 10% Ops</td>
+    </tr>
+    <tr>
+      <td><strong>Cash Flow Positive</strong></td>
+      <td>Q2 2028</td>
+    </tr>
+    <tr>
+      <td><strong>EBITDA Breakeven</strong></td>
+      <td>Q3 2028 (3% margin)</td>
+    </tr>
+    <tr>
+      <td><strong>Long-term Margins</strong></td>
+      <td>10%+ EBITDA by 2029</td>
+    </tr>
+  </tbody>
+</table>
 
 ## Business & Strategy
 
@@ -35,44 +177,6 @@ We've compiled answers to the most frequently asked questions from investors dur
   <p className="nx-text-sm nx-text-gray-600 dark:nx-text-gray-400">
     We envision Market Fit becoming the global standard for sales augmentation, deploying **150,000+ virtual employees** by 2027. Our mission is to democratize access to world-class sales capabilities, allowing any business to scale their sales operations infinitely. We're building the infrastructure that will fundamentally transform how sales teams operate across every industry.
   </p>
-</div>
-
-## Market & Growth
-
-### How big is the market opportunity?
-
-<div className="nx-mt-4 nx-rounded-lg nx-border nx-border-gray-200 nx-p-4 dark:nx-border-gray-800">
-  <p className="nx-text-sm nx-text-gray-600 dark:nx-text-gray-400">
-    The global sales automation market is **$25B by 2025**, growing at **32% CAGR**. Our serviceable addressable market is **$5.2B**, targeting B2B SaaS companies, technology firms, and professional services. With most sales teams still operating manually, there's massive opportunity as businesses accelerate digital transformation and AI adoption.
-  </p>
-</div>
-
-### What's driving your growth projections?
-
-<div className="nx-mt-4 nx-rounded-lg nx-border nx-border-gray-200 nx-p-4 dark:nx-border-gray-800">
-  <p className="nx-text-sm nx-text-gray-600 dark:nx-text-gray-400">
-    Our growth is driven by several key factors:
-  </p>
-  <ul className="nx-text-sm nx-list-disc nx-list-inside nx-mt-2 nx-space-y-1">
-    <li>**Zero-risk entry**: Commissionist plan removes barriers to adoption</li>
-    <li>**Exceptional unit economics**: 28x LTV/CAC growing to 83x by 2027</li>
-    <li>**Performance alignment**: Revenue share ensures customer success</li>
-    <li>**Network effects**: AI improves with every conversation across our platform</li>
-    <li>**Market timing**: Perfect convergence of AI advancement and sales digitization</li>
-  </ul>
-</div>
-
-### Who are your target customers?
-
-<div className="nx-mt-4 nx-rounded-lg nx-border nx-border-gray-200 nx-p-4 dark:nx-border-gray-800">
-  <p className="nx-text-sm nx-text-gray-600 dark:nx-text-gray-400">
-    We focus on three primary segments:
-  </p>
-  <ol className="nx-text-sm nx-list-decimal nx-list-inside nx-mt-2 nx-space-y-2">
-    <li>**B2B SaaS Companies** - Our primary market with complex sales cycles</li>
-    <li>**Technology Companies** - Fast-growing firms needing rapid sales scaling</li>
-    <li>**Professional Services** - Consultants, agencies, and service providers</li>
-  </ol>
 </div>
 
 ## Product & Technology
@@ -126,23 +230,6 @@ We've compiled answers to the most frequently asked questions from investors dur
 </div>
 
 ## Financials & Investment
-
-### What are your unit economics?
-
-<div className="nx-mt-4 nx-rounded-lg nx-border nx-border-gray-200 nx-p-4 dark:nx-border-gray-800">
-  <div className="nx-grid nx-grid-cols-2 nx-gap-4 nx-text-sm">
-    <div>
-      <strong>CAC:</strong> $150-$1,200<br/>
-      <strong>LTV:</strong> $7,900-$52,400<br/>
-      <strong>LTV/CAC:</strong> 28x-160x
-    </div>
-    <div>
-      <strong>Gross Margin:</strong> 85%+<br/>
-      <strong>Payback Period:</strong> 2.5 months<br/>
-      <strong>NRR:</strong> 135% (growing to 172%)
-    </div>
-  </div>
-</div>
 
 ### When will you be profitable?
 
