--- a/pages/executive-summary.mdx
+++ b/pages/executive-summary.mdx
@@ -950,10 +950,10 @@ import { InvestmentHighlight, MetricCard, FinancialCard, TimelineCard } from '..
   <h3>Ready to Build the Future of Sales?</h3>
   <p>We're looking for partners who share our vision of augmenting human potential with AI. This Seed round will fuel our expansion and help us build the sales force of the future.</p>
   <div className="contact-buttons">
-    <a href="mailto:investors@marketfit.io" className="contact-button">
+    <a href="mailto:sergio@uncodie.com" className="contact-button">
       📧 Contact Investors
     </a>
-    <a href="#" className="contact-button">
+    <a href="www.calendly.com/sergio-prado" className="contact-button">
       📅 Schedule a Call
     </a>
   </div>
