--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -51,12 +51,12 @@ import { NavigationCard, InvestmentHighlight, FeatureCard } from '../components/
   
   .summary-table td {
     padding: 1rem 1.5rem;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
   }
   
   .summary-table td:first-child {
     font-weight: 600;
-    background: rgba(255, 255, 255, 0.1);
+    background: rgba(255, 255, 255, 0.15);
   }
   
   .summary-table tr:last-child td {
@@ -946,8 +946,8 @@ This comprehensive data room provides everything you need to evaluate Market Fit
   <h3>Ready to Learn More?</h3>
   <p>Our team is available to answer questions and provide additional information.</p>
   <div className="contact-links">
-    <a href="mailto:investors@marketfit.io">investors@marketfit.io</a>
+    <a href="mailto:sergio@uncodie.com">sergio@uncodie.com</a>
     <span className="separator">|</span>
-    <a href="tel:+14155550100">+1 (415) 555-0100</a>
+    <a href="tel:+525514364">+52 1 (55) 4364 0787</a>
   </div>
 </div> 
