--- a/pages/legal/intellectual-property.mdx
+++ b/pages/legal/intellectual-property.mdx
@@ -1,50 +1,90 @@
 # Intellectual Property
 
+<style>{`
+  .summary-table {
+    width: 100%;
+    border-collapse: collapse;
+    background: rgba(255, 255, 255, 0.05);
+    border-radius: 12px;
+    overflow: hidden;
+    backdrop-filter: blur(10px);
+    margin: 1.5rem 0;
+  }
+  
+  .summary-table td {
+    padding: 1rem 1.5rem;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  }
+  
+  .summary-table td:first-child {
+    font-weight: 600;
+    background: rgba(0, 0, 0, 0.05);
+  }
+  
+  .summary-table tr:last-child td {
+    border-bottom: none;
+  }
+  
+  .dark .summary-table {
+    background: rgba(255, 255, 255, 0.05);
+  }
+  
+  .dark .summary-table td {
+    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+  }
+  
+  .dark .summary-table td:first-child {
+    background: rgba(255, 255, 255, 0.1);
+  }
+`}</style>
+
 ## IP Portfolio Overview
 
 Uncodie has built a comprehensive intellectual property portfolio protecting our core innovations and competitive advantages.
 
-<div className="nx-mt-6 nx-grid nx-grid-cols-1 nx-gap-4 md:nx-grid-cols-3">
-  <div className="nx-rounded-lg nx-border nx-border-gray-200 nx-p-4 dark:nx-border-gray-800">
-    <div className="nx-text-2xl nx-mb-2">📜</div>
-    <h3 className="nx-font-semibold">Patents</h3>
-    <span className="nx-text-sm nx-text-gray-600 dark:nx-text-gray-400 nx-mt-1">
-      3 pending applications, 6 planned filings
-    </span>
-  </div>
-  
-  <div className="nx-rounded-lg nx-border nx-border-gray-200 nx-p-4 dark:nx-border-gray-800">
-    <div className="nx-text-2xl nx-mb-2">™️</div>
-    <h3 className="nx-font-semibold">Trademarks</h3>
-    <span className="nx-text-sm nx-text-gray-600 dark:nx-text-gray-400 nx-mt-1">
-      2 registered marks
-    </span>
-  </div>
-  
-  <div className="nx-rounded-lg nx-border nx-border-gray-200 nx-p-4 dark:nx-border-gray-800">
-    <div className="nx-text-2xl nx-mb-2">🌐</div>
-    <h3 className="nx-font-semibold">Domains</h3>
-    <p className="nx-text-sm nx-text-gray-600 dark:nx-text-gray-400 nx-mt-1">
-      2 strategic domains
-    </p>
-  </div>
-</div>
+<table className="summary-table">
+  <tbody>
+    <tr>
+      <td><strong>📜 Patents</strong></td>
+      <td>3 pending applications, 6 planned filings</td>
+    </tr>
+    <tr>
+      <td><strong>™️ Trademarks</strong></td>
+      <td>2 registered marks</td>
+    </tr>
+    <tr>
+      <td><strong>🌐 Domains</strong></td>
+      <td>2 strategic domains</td>
+    </tr>
+  </tbody>
+</table>
 
 ## Patent Portfolio
 
 ### Current Pending Applications
-| Status | Title | First Usage Date | Jurisdiction |
-|--------|-------|------------------|--------------|
-| Pending | Computational Resource Allocation System Based on Commercial Results | 2023-11-15 | United States |
-| Pending | Task Tree-Based Memory System for AI Agents | 2023-12-20 | United States |
-| Pending | Multi-Layer Anti-Hallucination System for AI Models | 2024-01-10 | United States |
+<table className="summary-table">
+  <tbody>
+    <tr>
+      <td><strong>Computational Resource Allocation System Based on Commercial Results</strong></td>
+      <td>Pending | First Usage: 2023-11-15 | US</td>
+    </tr>
+    <tr>
+      <td><strong>Task Tree-Based Memory System for AI Agents</strong></td>
+      <td>Pending | First Usage: 2023-12-20 | US</td>
+    </tr>
+    <tr>
+      <td><strong>Multi-Layer Anti-Hallucination System for AI Models</strong></td>
+      <td>Pending | First Usage: 2024-01-10 | US</td>
+    </tr>
+  </tbody>
+</table>
 
 ### Strategic Patent Filing Plan
 
 <div className="nx-mt-8 nx-rounded-lg nx-bg-blue-50 nx-border nx-border-blue-200 nx-p-6 dark:nx-bg-blue-900/20 dark:nx-border-blue-800">
   <h3 className="nx-text-lg nx-font-semibold nx-mb-4">🎯 Go-to-Market Aligned Patent Strategy</h3>
   
-  #### Phase 1: Core Markets (Q3-Q4 2024)
+  #### Phase 1: Core Markets (Q3-Q4 2025)
   **United States** - Primary market for enterprise AI adoption
   - File continuation applications for all 3 core patents
   - Priority: Enterprise software and AI infrastructure patents
@@ -53,7 +93,7 @@ Uncodie has built a comprehensive intellectual property portfolio protecting our
   - PCT applications for all 3 core technologies
   - Focus: GDPR-compliant AI systems and data processing
   
-  #### Phase 2: High-Growth Markets (Q1-Q2 2025)
+  #### Phase 2: High-Growth Markets (Q1-Q2 2026)
   **Canada** - Strong AI ecosystem and early enterprise adopters
   - File national phase applications
   - Strategic for North American expansion
@@ -62,7 +102,7 @@ Uncodie has built a comprehensive intellectual property portfolio protecting our
   - Direct national filings for core technologies
   - Key for European market entry
   
-  #### Phase 3: Emerging AI Markets (Q3-Q4 2025)
+  #### Phase 3: Emerging AI Markets (Q3-Q4 2026)
   **Singapore** - ASEAN AI hub and gateway to Asia
   - Strategic for Southeast Asian expansion
   - Strong IP enforcement and tech-friendly regulations
@@ -75,12 +115,12 @@ Uncodie has built a comprehensive intellectual property portfolio protecting our
 ### Patent Filing Timeline
 | Quarter | Jurisdiction | Patent Applications | Strategic Focus |
 |---------|-------------|-------------------|-----------------|
-| Q3 2024 | US | Continuation applications (3) | Strengthen US protection |
-| Q4 2024 | PCT/EU | International applications (3) | Global priority establishment |
-| Q1 2025 | CA/UK | National phase entries (6) | English-speaking markets |
-| Q2 2025 | SG | Direct filings (3) | ASEAN market entry |
-| Q3 2025 | AU | National phase entries (3) | APAC expansion |
-| Q4 2025 | US | New innovation filings (2-3) | Next-gen technologies |
+| Q3 2025 | US | Continuation applications (3) | Strengthen US protection |
+| Q4 2025 | PCT/EU | International applications (3) | Global priority establishment |
+| Q1 2026 | CA/UK | National phase entries (6) | English-speaking markets |
+| Q2 2026 | SG | Direct filings (3) | ASEAN market entry |
+| Q3 2026 | AU | National phase entries (3) | APAC expansion |
+| Q4 2026 | US | New innovation filings (2-3) | Next-gen technologies |
 
 ## Trademark Portfolio
 
@@ -89,9 +129,9 @@ Uncodie has built a comprehensive intellectual property portfolio protecting our
 - **AI MARKET FIT** (Word Mark) - US Reg. No. 7,234,567
 
 ### International Trademark Strategy
-- **Q4 2024**: File Madrid Protocol applications for EU, UK, CA, AU
-- **Q1 2025**: Direct filings in Singapore and key ASEAN markets
-- **Q2 2025**: Defensive registrations in emerging markets
+- **Q4 2025**: File Madrid Protocol applications for EU, UK, CA, AU
+- **Q1 2026**: Direct filings in Singapore and key ASEAN markets
+- **Q2 2026**: Defensive registrations in emerging markets
 
 ## Domain Portfolio
 
@@ -253,9 +293,9 @@ Uncodie has built a comprehensive intellectual property portfolio protecting our
 ## Future IP Strategy
 
 ### Patent Pipeline
-- **Q3 2024**: File 3 continuation applications (US)
-- **Q4 2024**: International PCT applications
-- **2025**: National phase entries in target markets
+- **Q3 2025**: File 3 continuation applications (US)
+- **Q4 2025**: International PCT applications
+- **2026**: National phase entries in target markets
 - **Ongoing**: Defensive patent acquisitions
 
 ### Brand Expansion
