--- a/pages/market/competitive-landscape.mdx
+++ b/pages/market/competitive-landscape.mdx
@@ -1,75 +1,99 @@
 # Competitive Landscape
 
+<style>{`
+  .summary-table {
+    width: 100%;
+    border-collapse: collapse;
+    background: rgba(255, 255, 255, 0.05);
+    border-radius: 12px;
+    overflow: hidden;
+    backdrop-filter: blur(10px);
+    margin: 1.5rem 0;
+  }
+  
+  .summary-table td {
+    padding: 1rem 1.5rem;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  }
+  
+  .summary-table td:first-child {
+    font-weight: 600;
+    background: rgba(0, 0, 0, 0.05);
+  }
+  
+  .summary-table tr:last-child td {
+    border-bottom: none;
+  }
+  
+  .dark .summary-table {
+    background: rgba(255, 255, 255, 0.05);
+  }
+  
+  .dark .summary-table td {
+    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+  }
+  
+  .dark .summary-table td:first-child {
+    background: rgba(255, 255, 255, 0.1);
+  }
+`}</style>
+
 ## Market Overview
 
 The sales automation and AI-powered sales tools market is rapidly evolving, with traditional CRM vendors, specialized sales tools, and emerging AI companies all competing for market share. Recent market analysis reveals significant discrepancies in previously reported data, requiring a comprehensive revision of competitive positioning.
 
 ## Direct Competitors
 
-### Salesforce Einstein Analytics
-**Legacy CRM with Limited AI Adoption**
-- **Strengths**: Salesforce ecosystem integration, enterprise relationships
-- **Weaknesses**: Complex setup, expensive, extremely limited AI Analytics adoption
-- **Market Share**: 0.01% (Einstein Analytics specifically)
-- **Pricing**: $25-500/user/month (Sales Cloud range)
-- **Reality Check**: Despite Salesforce's CRM dominance, Einstein Analytics has minimal market penetration, indicating low adoption of specialized AI analytics within the platform
-
-### SalesLoft
-**Market Leader in Sales Analytics**
-- **Strengths**: Dominates sales analytics (78.29% market share), 4,658+ enterprise clients including Zoom, Citrix, Experian
-- **Weaknesses**: High implementation costs, mandatory annual contracts
-- **Market Share**: 78.29% (Sales Analytics category)
-- **Pricing**: $75-125/user/month + $3,000 implementation fee + annual commitment
-- **Client Profile**: Enterprise-focused with proven enterprise adoption
-
-### Outreach.io
-**Niche Communication Automation Player**
-- **Strengths**: Established sales engagement features, some enterprise adoption
-- **Weaknesses**: Minimal market penetration (0.03%), high total costs, US-centric (78% of users)
-- **Market Share**: 0.03% (Communication category), 6.1% (Sales Engagement - conflicting data sources)
-- **Pricing**: $100/user/month base, $20k-$50k annual enterprise costs
-- **Geographic Concentration**: 78% US market, limited international presence
+<table className="summary-table">
+  <tbody>
+    <tr>
+      <td><strong>Salesforce Einstein Analytics</strong></td>
+      <td>0.01% market share | $25-500/user/month | Complex setup, limited AI adoption</td>
+    </tr>
+    <tr>
+      <td><strong>SalesLoft</strong></td>
+      <td>78.29% market share | $75-125/user/month + $3K setup | Sales analytics leader</td>
+    </tr>
+    <tr>
+      <td><strong>Outreach.io</strong></td>
+      <td>0.03% market share | $100/user/month | $20K-$50K annual reality</td>
+    </tr>
+  </tbody>
+</table>
 
 ## Indirect Competitors
 
-### HubSpot
-**Inbound Marketing and Sales Platform**
-- **Strengths**: Integrated marketing and sales, good for SMBs, comprehensive platform
-- **Weaknesses**: Limited advanced AI capabilities, enterprise feature gaps
-- **Market Share**: 8.3% (estimated CRM market)
-- **Pricing**: $45-120/user/month, Enterprise at $3,600/month + $75/additional user
-- **Position**: Strong in SMB segment with integrated approach
-
-### Pipedrive
-**High-Performance Simple CRM**
-- **Strengths**: Proven effectiveness (40% deal closure rate), 170-country presence, SMB-focused
-- **Weaknesses**: Limited AI capabilities, basic automation features
-- **Market Share**: 1.9% (estimated)
-- **Pricing**: $15-99/user/month
-- **Key Metric**: 40% deal closure rate with 20% year-over-year improvement
-- **Global Reach**: Strong international presence across emerging markets
+<table className="summary-table">
+  <tbody>
+    <tr>
+      <td><strong>HubSpot</strong></td>
+      <td>8.3% market share | $45-120/user/month | Strong SMB, limited enterprise AI</td>
+    </tr>
+    <tr>
+      <td><strong>Pipedrive</strong></td>
+      <td>1.9% market share | $15-99/user/month | 40% deal closure rate, 170 countries</td>
+    </tr>
+  </tbody>
+</table>
 
 ## Emerging AI Competitors
 
-### Gong.io
-**Revenue Intelligence Specialist**
-- **Strengths**: Conversation analytics, deal insights, coaching capabilities
-- **Weaknesses**: Reactive analysis only, no proactive automation, limited market share
-- **Market Share**: 0.7% (Sales Performance Management)
-- **Focus**: Call analysis and revenue intelligence
-- **Client Profile**: 43% software companies, $10M-$50M revenue range, 80% US-based
-
-### Chorus.ai (ZoomInfo)
-**Conversation Analytics**
-- **Strengths**: Meeting intelligence, competitive insights, ZoomInfo integration
-- **Weaknesses**: Analysis-only approach, no outbound automation
-- **Focus**: Sales call analysis and conversation intelligence
-
-### Clay
-**AI-Powered Prospecting**
-- **Strengths**: Advanced data enrichment, AI research capabilities
-- **Weaknesses**: Limited conversation features, manual process requirements
-- **Focus**: Lead research and data enrichment
+<table className="summary-table">
+  <tbody>
+    <tr>
+      <td><strong>Gong.io</strong></td>
+      <td>0.7% market share | Revenue intelligence | Reactive analysis only</td>
+    </tr>
+    <tr>
+      <td><strong>Chorus.ai (ZoomInfo)</strong></td>
+      <td>Conversation analytics | Meeting intelligence | Analysis-only approach</td>
+    </tr>
+    <tr>
+      <td><strong>Clay</strong></td>
+      <td>AI-powered prospecting | Advanced data enrichment | Limited conversation features</td>
+    </tr>
+  </tbody>
+</table>
 
 ## Competitive Advantages
 
