--- a/pages/market/differentiation.mdx
+++ b/pages/market/differentiation.mdx
@@ -1,8 +1,67 @@
 # Our Differentiation
 
+<style>{`
+  .summary-table {
+    width: 100%;
+    border-collapse: collapse;
+    background: rgba(255, 255, 255, 0.05);
+    border-radius: 12px;
+    overflow: hidden;
+    backdrop-filter: blur(10px);
+    margin: 1.5rem 0;
+  }
+  
+  .summary-table td {
+    padding: 1rem 1.5rem;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  }
+  
+  .summary-table td:first-child {
+    font-weight: 600;
+    background: rgba(0, 0, 0, 0.05);
+  }
+  
+  .summary-table tr:last-child td {
+    border-bottom: none;
+  }
+  
+  .dark .summary-table {
+    background: rgba(255, 255, 255, 0.05);
+  }
+  
+  .dark .summary-table td {
+    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+  }
+  
+  .dark .summary-table td:first-child {
+    background: rgba(255, 255, 255, 0.1);
+  }
+`}</style>
+
 ## Competitive Advantages
 
 Zero Technical Barrier: Deploy industry-optimized AI agents without any setup or AI expertise
+
+<table className="summary-table">
+  <tbody>
+    <tr>
+      <td><strong>💰 Zero Risk</strong></td>
+      <td>Performance-based pricing - only pay when we generate revenue (10% commission)</td>
+    </tr>
+    <tr>
+      <td><strong>🤖 Autonomous</strong></td>
+      <td>Full multi-channel integration with 0 human intervention required</td>
+    </tr>
+    <tr>
+      <td><strong>📈 Self Improved</strong></td>
+      <td>Immediate ROI with continuous learning and real-time optimization</td>
+    </tr>
+    <tr>
+      <td><strong>⚡ Super Efficient</strong></td>
+      <td>10x better EBITDA per team member - $1.5M+ revenue per employee</td>
+    </tr>
+  </tbody>
+</table>
 
 ### 1. Zero Risk
 **Performance-Based Pricing**
