--- a/pages/market/expansion-strategy.mdx
+++ b/pages/market/expansion-strategy.mdx
@@ -1,69 +1,98 @@
 # Market Expansion Strategy
 
+<style>{`
+  .summary-table {
+    width: 100%;
+    border-collapse: collapse;
+    background: rgba(255, 255, 255, 0.05);
+    border-radius: 12px;
+    overflow: hidden;
+    backdrop-filter: blur(10px);
+    margin: 1.5rem 0;
+  }
+  
+  .summary-table td {
+    padding: 1rem 1.5rem;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  }
+  
+  .summary-table td:first-child {
+    font-weight: 600;
+    background: rgba(0, 0, 0, 0.05);
+  }
+  
+  .summary-table tr:last-child td {
+    border-bottom: none;
+  }
+  
+  .dark .summary-table {
+    background: rgba(255, 255, 255, 0.05);
+  }
+  
+  .dark .summary-table td {
+    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+  }
+  
+  .dark .summary-table td:first-child {
+    background: rgba(255, 255, 255, 0.1);
+  }
+`}</style>
+
 ## Geographic Expansion Plan
 
 ### Phase 1: English-Speaking Markets (2024-2025)
-**Low-Risk, High-Opportunity Markets**
-
-#### United Kingdom
-- **Market Size**: $95M opportunity
-- **Entry Strategy**: Direct sales with local partnerships
-- **Timeline**: Q2 2025 launch
-- **Investment**: $2M for local team and operations
-
-#### Australia & New Zealand
-- **Market Size**: $42M opportunity
-- **Entry Strategy**: Remote sales with local support
-- **Timeline**: Q3 2025 launch
-- **Investment**: $1M for regional operations
-
-#### Canada
-- **Market Size**: $38M opportunity
-- **Entry Strategy**: Extension of US operations
-- **Timeline**: Q1 2025 launch
-- **Investment**: $500K for compliance and localization
+<table className="summary-table">
+  <tbody>
+    <tr>
+      <td><strong>🇬🇧 United Kingdom</strong></td>
+      <td>$95M opportunity | Q2 2025 launch | $2M investment</td>
+    </tr>
+    <tr>
+      <td><strong>🇦🇺 Australia & New Zealand</strong></td>
+      <td>$42M opportunity | Q3 2025 launch | $1M investment</td>
+    </tr>
+    <tr>
+      <td><strong>🇨🇦 Canada</strong></td>
+      <td>$38M opportunity | Q1 2025 launch | $500K investment</td>
+    </tr>
+  </tbody>
+</table>
 
 ### Phase 2: European Markets (2025-2026)
-**Strategic European Expansion**
-
-#### Germany
-- **Market Size**: $156M opportunity
-- **Entry Strategy**: Local partnerships and direct investment
-- **Timeline**: Q4 2025 launch
-- **Investment**: $5M for local team and compliance
-
-#### France
-- **Market Size**: $89M opportunity
-- **Entry Strategy**: Channel partnerships initially
-- **Timeline**: Q2 2026 launch
-- **Investment**: $3M for market entry
-
-#### Netherlands & Nordics
-- **Market Size**: $67M combined opportunity
-- **Entry Strategy**: Regional hub approach
-- **Timeline**: Q3 2026 launch
-- **Investment**: $2.5M for regional operations
+<table className="summary-table">
+  <tbody>
+    <tr>
+      <td><strong>🇩🇪 Germany</strong></td>
+      <td>$156M opportunity | Q4 2025 launch | $5M investment</td>
+    </tr>
+    <tr>
+      <td><strong>🇫🇷 France</strong></td>
+      <td>$89M opportunity | Q2 2026 launch | $3M investment</td>
+    </tr>
+    <tr>
+      <td><strong>🇳🇱 Netherlands & Nordics</strong></td>
+      <td>$67M opportunity | Q3 2026 launch | $2.5M investment</td>
+    </tr>
+  </tbody>
+</table>
 
 ### Phase 3: Asia-Pacific (2026-2027)
-**High-Growth Markets**
-
-#### Japan
-- **Market Size**: $78M opportunity
-- **Entry Strategy**: Joint venture with local partner
-- **Timeline**: Q1 2027 launch
-- **Investment**: $4M for partnership and localization
-
-#### Singapore (APAC Hub)
-- **Market Size**: $23M direct, $200M+ regional
-- **Entry Strategy**: Regional headquarters
-- **Timeline**: Q3 2026 launch
-- **Investment**: $6M for regional operations
-
-#### India
-- **Market Size**: $67M opportunity
-- **Entry Strategy**: Local development center
-- **Timeline**: Q4 2026 launch
-- **Investment**: $3M for operations and talent
+<table className="summary-table">
+  <tbody>
+    <tr>
+      <td><strong>🇯🇵 Japan</strong></td>
+      <td>$78M opportunity | Q1 2027 launch | $4M investment</td>
+    </tr>
+    <tr>
+      <td><strong>🇸🇬 Singapore (APAC Hub)</strong></td>
+      <td>$23M direct, $200M+ regional | Q3 2026 launch | $6M investment</td>
+    </tr>
+    <tr>
+      <td><strong>🇮🇳 India</strong></td>
+      <td>$67M opportunity | Q4 2026 launch | $3M investment</td>
+    </tr>
+  </tbody>
+</table>
 
 ## Vertical Market Expansion
 
