--- a/pages/market/market-trends.mdx
+++ b/pages/market/market-trends.mdx
@@ -1,6 +1,65 @@
 # Market Trends
 
+<style>{`
+  .summary-table {
+    width: 100%;
+    border-collapse: collapse;
+    background: rgba(255, 255, 255, 0.05);
+    border-radius: 12px;
+    overflow: hidden;
+    backdrop-filter: blur(10px);
+    margin: 1.5rem 0;
+  }
+  
+  .summary-table td {
+    padding: 1rem 1.5rem;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  }
+  
+  .summary-table td:first-child {
+    font-weight: 600;
+    background: rgba(0, 0, 0, 0.05);
+  }
+  
+  .summary-table tr:last-child td {
+    border-bottom: none;
+  }
+  
+  .dark .summary-table {
+    background: rgba(255, 255, 255, 0.05);
+  }
+  
+  .dark .summary-table td {
+    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+  }
+  
+  .dark .summary-table td:first-child {
+    background: rgba(255, 255, 255, 0.1);
+  }
+`}</style>
+
 ## Technology Trends Driving Growth
+
+<table className="summary-table">
+  <tbody>
+    <tr>
+      <td><strong>🤖 AI & Machine Learning Adoption</strong></td>
+      <td>67% of sales orgs investing in AI tools (up from 29% in 2020)</td>
+    </tr>
+    <tr>
+      <td><strong>🏠 Remote & Hybrid Sales Models</strong></td>
+      <td>73% of sales teams now work remotely or hybrid</td>
+    </tr>
+    <tr>
+      <td><strong>⚡ Automation & Efficiency Focus</strong></td>
+      <td>65% of sales ops teams adopting no-code/low-code solutions</td>
+    </tr>
+    <tr>
+      <td><strong>💬 Conversational AI Growth</strong></td>
+      <td>340% growth in conversational AI adoption over past 2 years</td>
+    </tr>
+  </tbody>
+</table>
 
 ### AI & Machine Learning Adoption
 **Accelerating Enterprise AI Implementation**
@@ -24,6 +83,27 @@
 - 84% of buyers expect personalized experiences
 
 ## Buyer Behavior Evolution
+
+<table className="summary-table">
+  <tbody>
+    <tr>
+      <td><strong>🛍️ Self-Service Preference</strong></td>
+      <td>67% prefer self-service options over human interaction</td>
+    </tr>
+    <tr>
+      <td><strong>⚡ Instant Gratification Expectations</strong></td>
+      <td>90% expect response within 1 hour, 50% abandon if >24 hours</td>
+    </tr>
+    <tr>
+      <td><strong>🔍 Trust & Authenticity Demands</strong></td>
+      <td>84% can identify automated messages, 92% prefer personalized comms</td>
+    </tr>
+    <tr>
+      <td><strong>📱 Digital-First Journey</strong></td>
+      <td>60% of buying process completed before engaging sales</td>
+    </tr>
+  </tbody>
+</table>
 
 ### Self-Service Preference
 **Buyers Taking Control of Sales Process**
