--- a/pages/market/target-customers.mdx
+++ b/pages/market/target-customers.mdx
@@ -1,24 +1,95 @@
 # Target Customer Profiles
 
+<style>{`
+  .summary-table {
+    width: 100%;
+    border-collapse: collapse;
+    background: rgba(255, 255, 255, 0.05);
+    border-radius: 12px;
+    overflow: hidden;
+    backdrop-filter: blur(10px);
+    margin: 1.5rem 0;
+  }
+  
+  .summary-table td {
+    padding: 1rem 1.5rem;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  }
+  
+  .summary-table td:first-child {
+    font-weight: 600;
+    background: rgba(0, 0, 0, 0.05);
+  }
+  
+  .summary-table tr:last-child td {
+    border-bottom: none;
+  }
+  
+  .dark .summary-table {
+    background: rgba(255, 255, 255, 0.05);
+  }
+  
+  .dark .summary-table td {
+    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+  }
+  
+  .dark .summary-table td:first-child {
+    background: rgba(255, 255, 255, 0.1);
+  }
+`}</style>
+
 ## Primary Market Segments
 
 ### B2B SaaS Companies
 **Core Target Segment - 25% of TAM**
 
 #### Company Characteristics
-- **Size**: 20-200 employees
-- **Revenue**: $2M-$50M ARR
-- **Growth Stage**: Series A to Series C, or bootstrapped with strong growth
-- **Sales Team**: 5-25 sales representatives
-- **Sales Model**: Inside sales, product-led growth transitioning to sales-led
-- **Current Stack**: CRM (HubSpot, Salesforce), basic sales engagement tools
+<table className="summary-table">
+  <tbody>
+    <tr>
+      <td><strong>Company Size</strong></td>
+      <td>20-200 employees</td>
+    </tr>
+    <tr>
+      <td><strong>Revenue Range</strong></td>
+      <td>$2M-$50M ARR</td>
+    </tr>
+    <tr>
+      <td><strong>Growth Stage</strong></td>
+      <td>Series A to Series C, or bootstrapped with strong growth</td>
+    </tr>
+    <tr>
+      <td><strong>Sales Team Size</strong></td>
+      <td>5-25 sales representatives</td>
+    </tr>
+    <tr>
+      <td><strong>Sales Model</strong></td>
+      <td>Inside sales, product-led growth transitioning to sales-led</td>
+    </tr>
+  </tbody>
+</table>
 
 #### Critical Pain Points
-- **SDR Productivity**: Each SDR can only handle 50-100 leads effectively
-- **Response Time**: 35% of leads go cold due to slow follow-up (>24 hours)
-- **Qualification Accuracy**: 40% of meetings booked are with unqualified prospects
-- **Scaling Costs**: $75K+ per SDR annually vs. our solution at $1,200/month
-- **Lead Coverage**: Can only work 20% of their lead database actively
+<table className="summary-table">
+  <tbody>
+    <tr>
+      <td><strong>SDR Productivity</strong></td>
+      <td>Each SDR can only handle 50-100 leads effectively</td>
+    </tr>
+    <tr>
+      <td><strong>Response Time</strong></td>
+      <td>35% of leads go cold due to slow follow-up (>24 hours)</td>
+    </tr>
+    <tr>
+      <td><strong>Qualification Accuracy</strong></td>
+      <td>40% of meetings booked are with unqualified prospects</td>
+    </tr>
+    <tr>
+      <td><strong>Scaling Costs</strong></td>
+      <td>$75K+ per SDR annually vs. our solution at $1,200/month</td>
+    </tr>
+  </tbody>
+</table>
 
 #### Key Decision Makers
 - **Economic Buyer**: VP of Sales, CRO (makes budget decisions)
