--- a/pages/product/demo.mdx
+++ b/pages/product/demo.mdx
@@ -25,7 +25,7 @@ Experience the power of AI-driven sales automation with our interactive product 
 - Lead management and scoring
 - Campaign setup and automation
 
-[**Schedule Live Demo**](https://calendly.com/marketfit-demo) - 30 minutes with our sales team
+[**Schedule Live Demo**](https://calendly.com/sergio-prado) - 30 minutes with our sales team
 
 ### Self-Guided Demo
 **Try It Yourself**
@@ -34,7 +34,7 @@ Experience the power of AI-driven sales automation with our interactive product 
 - No registration required
 - Available 24/7
 
-[**Start Self-Guided Demo**](#) - 15 minutes, no commitment
+[**Start Self-Guided Demo**](https://app.uncodie.com) - 15 minutes, no commitment
 
 ## Demo Scenarios
 
