--- a/pages/traction/case-studies.mdx
+++ b/pages/traction/case-studies.mdx
@@ -46,7 +46,7 @@ Discover how leading companies use Market Fit to accelerate product development 
       "Market Fit nos ayudó a entender exactamente dónde nuestros clientes se confundían en el proceso. Ahora el compliance es mucho más ágil y transparente."
     </blockquote>
     <p className="nx-text-sm nx-mt-2 nx-text-gray-600 dark:nx-text-gray-400">
-      - Maria Rodriguez, Directora de Operaciones, Global Work Colombia
+      - Sebastian Henao, Director de Operaciones, Global Work Colombia
     </p>
   </div>
 </div>
@@ -91,7 +91,7 @@ Discover how leading companies use Market Fit to accelerate product development 
       "The insights from Market Fit were game-changing. We finally understood where users were getting stuck and how to guide them to success."
     </blockquote>
     <p className="nx-text-sm nx-mt-2 nx-text-gray-600 dark:nx-text-gray-400">
-      - Carlos Mendez, Co-founder, Uncodie
+      - Sergio Prado, Co-founder, Uncodie
     </p>
   </div>
 </div>
@@ -136,7 +136,7 @@ Discover how leading companies use Market Fit to accelerate product development 
       "Market Fit nos dio la estructura que necesitábamos. Ahora podemos anticipar las necesidades de nuestros clientes y entregar reportes a tiempo, siempre."
     </blockquote>
     <p className="nx-text-sm nx-mt-2 nx-text-gray-600 dark:nx-text-gray-400">
-      - Andrea Silva, Fundadora, Galpra Contabilidad
+      - Mariana Galvan, Fundadora, Galpra Contabilidad
     </p>
   </div>
 </div>
