--- a/pages/appendix/contact.mdx
+++ b/pages/appendix/contact.mdx
@@ -14,12 +14,12 @@ We're here to support your due diligence process and answer any questions you ma
       <span className="nx-text-blue-600 dark:nx-text-blue-400">💼</span>
     </div>
     <div className="nx-flex-1">
-      <h3 className="nx-font-semibold nx-text-lg">Sarah Chen</h3>
-      <span className="nx-text-sm nx-text-gray-600 dark:nx-text-gray-400">CEO & Co-Founder</span>
+      <h3 className="nx-font-semibold nx-text-lg">Sergio Prado</h3>
+      <p className="nx-text-sm nx-text-gray-600 dark:nx-text-gray-400">CEO & Co-Founder</p>
       <div className="nx-mt-3 nx-space-y-1">
-        <span className="nx-text-sm"><strong>Email:</strong> <span>sarah@marketfit.io</span></span>
-        <p className="nx-text-sm"><strong>Direct:</strong> <span>+1 (415) 555-0100</span></p>
-        <p className="nx-text-sm"><strong>LinkedIn:</strong> linkedin.com/in/sarahchen-marketfit</p>
+        <p className="nx-text-sm"><strong>Email:</strong> sergio@uncodie.com</p>
+        <p className="nx-text-sm"><strong>Direct:</strong> +52 1 (461) 172 1870</p>
+        <p className="nx-text-sm"><strong>LinkedIn:</strong> https://www.linkedin.com/in/sergio-prado-a3823b41/</p>
       </div>
     </div>
   </div>
@@ -31,12 +31,12 @@ We're here to support your due diligence process and answer any questions you ma
       <span className="nx-text-purple-600 dark:nx-text-purple-400">📊</span>
     </div>
     <div className="nx-flex-1">
-      <h3 className="nx-font-semibold nx-text-lg">David Park</h3>
-      <span className="nx-text-sm nx-text-gray-600 dark:nx-text-gray-400">CFO</span>
+      <h3 className="nx-font-semibold nx-text-lg">Alejandra Barragan</h3>
+      <p className="nx-text-sm nx-text-gray-600 dark:nx-text-gray-400">COO & Co-Founder</p>
       <div className="nx-mt-3 nx-space-y-1">
-        <span className="nx-text-sm"><strong>Email:</strong> <span>david@marketfit.io</span></span>
-        <p className="nx-text-sm"><strong>Direct:</strong> <span>+1 (415) 555-0101</span></p>
-        <p className="nx-text-sm"><strong>Calendar:</strong> calendly.com/marketfit-cfo</p>
+        <p className="nx-text-sm"><strong>Email:</strong> ale@uncodie.com</p>
+        <p className="nx-text-sm"><strong>Direct:</strong> +52 1 (461) 280 9051</p>
+        <p className="nx-text-sm"><strong>LinkedIn:</strong> https://www.linkedin.com/in/alejandra-barragán-contreras/</p>
       </div>
     </div>
   </div>
@@ -45,36 +45,13 @@ We're here to support your due diligence process and answer any questions you ma
 ### 🏢 Corporate Headquarters
 
 <div className="nx-mt-6 nx-rounded-lg nx-border nx-border-gray-200 nx-p-6 dark:nx-border-gray-800">
-  <h4 className="nx-font-semibold nx-mb-3">San Francisco Office</h4>
+  <h4 className="nx-font-semibold nx-mb-3">Bajío Office</h4>
   <div className="nx-space-y-1 nx-text-sm">
-    <span>Market Fit, Inc.</span>
-    <span>123 Mission Street, Suite 1500</span>
-    <span>San Francisco, CA 94105</span>
-    <span>United States</span>
-    <p className="nx-mt-3"><strong>General:</strong> <span>+1 (415) 555-0000</span></p>
-    <p><strong>Fax:</strong> <span>+1 (415) 555-0001</span></p>
-  </div>
-</div>
-
-### 🌍 Additional Offices
-
-<div className="nx-mt-6 nx-grid nx-grid-cols-1 nx-gap-4 md:nx-grid-cols-2">
-  <div className="nx-rounded-lg nx-border nx-border-gray-200 nx-p-4 dark:nx-border-gray-800">
-    <h4 className="nx-font-semibold nx-mb-2">New York</h4>
-    <div className="nx-text-sm nx-space-y-1">
-      <span>456 Broadway, Floor 20</span>
-      <span>New York, NY 10013</span>
-      <p className="nx-mt-2">+1 (212) 555-0200</p>
-    </div>
-  </div>
-  
-  <div className="nx-rounded-lg nx-border nx-border-gray-200 nx-p-4 dark:nx-border-gray-800">
-    <h4 className="nx-font-semibold nx-mb-2">Austin</h4>
-    <div className="nx-text-sm nx-space-y-1">
-      <span>789 Congress Ave, Suite 300</span>
-      <span>Austin, TX 78701</span>
-      <p className="nx-mt-2">+1 (512) 555-0300</p>
-    </div>
+    <p>Uncodie, Corp.</p>
+    <p>Manuel Doblado 477</p>
+    <p>Celaya, Guanajuato</p>
+    <p>México</p>
+    <p className="nx-mt-3"><strong>Whatsapp:</strong> +52 1 (55) 4364 0787</p>
   </div>
 </div>
 
@@ -86,11 +63,11 @@ We're here to support your due diligence process and answer any questions you ma
   <h4 className="nx-font-semibold nx-mb-3">Dedicated DD Team</h4>
   <div className="nx-space-y-3">
     <div>
-      <span className="nx-text-sm"><strong>Email:</strong> <span>dataroom@marketfit.io</span></span>
-      <span className="nx-text-sm nx-text-gray-600 dark:nx-text-gray-400">For data room access requests and document inquiries</span>
+      <p className="nx-text-sm"><strong>Email:</strong> ale@uncodie.com</p>
+      <p className="nx-text-sm nx-text-gray-600 dark:nx-text-gray-400">For data room access requests and document inquiries</p>
     </div>
     <div>
-      <p className="nx-text-sm"><strong>Email:</strong> <span>dd@marketfit.io</span></p>
+      <p className="nx-text-sm"><strong>Email:</strong> sergio@uncodie.com</p>
       <p className="nx-text-sm nx-text-gray-600 dark:nx-text-gray-400">For scheduling due diligence calls and meetings</p>
     </div>
   </div>
@@ -101,59 +78,15 @@ We're here to support your due diligence process and answer any questions you ma
 <div className="nx-mt-6 nx-space-y-4">
   <div className="nx-rounded-lg nx-border nx-border-gray-200 nx-p-4 dark:nx-border-gray-800">
     <h4 className="nx-font-medium">Technology & Product</h4>
-    <span className="nx-text-sm nx-text-gray-600 dark:nx-text-gray-400">Dr. Michael Zhang, CTO</span>
-    <span className="nx-text-sm">m<span>ichael@marketfit.io</span></span>
+    <p className="nx-text-sm nx-text-gray-600 dark:nx-text-gray-400">Sergio Prado, CTO</p>
+    <p className="nx-text-sm">sergio@uncodie.com</p>
   </div>
   
   <div className="nx-rounded-lg nx-border nx-border-gray-200 nx-p-4 dark:nx-border-gray-800">
     <h4 className="nx-font-medium">Sales & Customer Success</h4>
-    <p className="nx-text-sm nx-text-gray-600 dark:nx-text-gray-400">Lisa Rodriguez, COO</p>
-    <p className="nx-text-sm">l<span>isa@marketfit.io</span></p>
+    <p className="nx-text-sm nx-text-gray-600 dark:nx-text-gray-400">Alejandra Barragan, COO</p>
+    <p className="nx-text-sm">ale@uncodie.com</p>
   </div>
-  
-  <div className="nx-rounded-lg nx-border nx-border-gray-200 nx-p-4 dark:nx-border-gray-800">
-    <h4 className="nx-font-medium">Legal & Compliance</h4>
-    <p className="nx-text-sm nx-text-gray-600 dark:nx-text-gray-400">Jennifer Wu, General Counsel</p>
-    <p className="nx-text-sm">l<span>egal@marketfit.io</span></p>
-  </div>
-  
-  <div className="nx-rounded-lg nx-border nx-border-gray-200 nx-p-4 dark:nx-border-gray-800">
-    <h4 className="nx-font-medium">Human Resources</h4>
-    <p className="nx-text-sm nx-text-gray-600 dark:nx-text-gray-400">Marcus Thompson, VP People</p>
-    <p className="nx-text-sm">p<span>eople@marketfit.io</span></p>
-  </div>
-</div>
-
-## External Advisors
-
-### 🏦 Banking & Legal
-
-<div className="nx-mt-6 nx-grid nx-grid-cols-1 nx-gap-4 md:nx-grid-cols-2">
-  <div className="nx-rounded-lg nx-border nx-border-gray-200 nx-p-4 dark:nx-border-gray-800">
-    <h4 className="nx-font-semibold nx-mb-2">Investment Banking</h4>
-    <span className="nx-text-sm nx-font-medium">Morgan Stanley</span>
-    <span className="nx-text-sm nx-text-gray-600 dark:nx-text-gray-400">Technology Investment Banking</span>
-    <p className="nx-text-sm nx-mt-1">Contact: John Smith</p>
-    <p className="nx-text-sm">j<span>ohn.smith@morganstanley.com</span></p>
-  </div>
-  
-  <div className="nx-rounded-lg nx-border nx-border-gray-200 nx-p-4 dark:nx-border-gray-800">
-    <h4 className="nx-font-semibold nx-mb-2">Legal Counsel</h4>
-    <p className="nx-text-sm nx-font-medium">Wilson Sonsini</p>
-    <p className="nx-text-sm nx-text-gray-600 dark:nx-text-gray-400">Corporate & Securities</p>
-    <p className="nx-text-sm nx-mt-1">Contact: Emily Chen</p>
-    <p className="nx-text-sm">e<span>chen@wsgr.com</span></p>
-  </div>
-</div>
-
-### 📊 Accounting & Audit
-
-<div className="nx-mt-4 nx-rounded-lg nx-border nx-border-gray-200 nx-p-4 dark:nx-border-gray-800">
-  <h4 className="nx-font-semibold nx-mb-2">Independent Auditor</h4>
-  <p className="nx-text-sm nx-font-medium">Deloitte & Touche LLP</p>
-  <p className="nx-text-sm nx-text-gray-600 dark:nx-text-gray-400">Audit Partner: Robert Johnson</p>
-  <p className="nx-text-sm">r<span>johnson@deloitte.com</span></p>
-  <p className="nx-text-sm">+1 (415) 555-0400</p>
 </div>
 
 ## Quick Response Times
@@ -163,11 +96,11 @@ We're here to support your due diligence process and answer any questions you ma
   <div className="nx-grid nx-grid-cols-1 nx-gap-3 md:nx-grid-cols-3">
     <div className="nx-text-center">
       <div className="nx-text-2xl nx-font-bold nx-text-green-700 dark:nx-text-green-400">Less than 2 hours</div>
-      <span className="nx-text-sm nx-text-green-600 dark:nx-text-green-500">Email response time</span>
+      <p className="nx-text-sm nx-text-green-600 dark:nx-text-green-500">Email response time</p>
     </div>
     <div className="nx-text-center">
       <div className="nx-text-2xl nx-font-bold nx-text-green-700 dark:nx-text-green-400">24/7</div>
-      <span className="nx-text-sm nx-text-green-600 dark:nx-text-green-500">Data room access</span>
+      <p className="nx-text-sm nx-text-green-600 dark:nx-text-green-500">Data room access</p>
     </div>
     <div className="nx-text-center">
       <div className="nx-text-2xl nx-font-bold nx-text-green-700 dark:nx-text-green-400">Same day</div>
@@ -179,18 +112,13 @@ We're here to support your due diligence process and answer any questions you ma
 ## Connect on Social
 
 <div className="nx-mt-8 nx-flex nx-gap-4">
-  <a href="#" className="nx-rounded-lg nx-border nx-border-gray-200 nx-p-3 nx-no-underline hover:nx-shadow-md nx-transition-shadow dark:nx-border-gray-800">
-    <span className="nx-text-xl">🐦</span>
-    <span className="nx-text-sm nx-mt-1">@MarketFitAI</span>
+  <a href="https://tiktok.com/@uncodie" className="nx-rounded-lg nx-border nx-border-gray-200 nx-p-3 nx-no-underline hover:nx-shadow-md nx-transition-shadow dark:nx-border-gray-800">
+    <div className="nx-text-xl">🎬 TikTok</div>
+    <div className="nx-text-sm nx-mt-1">@uncodie</div>
   </a>
   
-  <a href="#" className="nx-rounded-lg nx-border nx-border-gray-200 nx-p-3 nx-no-underline hover:nx-shadow-md nx-transition-shadow dark:nx-border-gray-800">
-    <span className="nx-text-xl">💼</span>
-    <span className="nx-text-sm nx-mt-1">Market Fit</span>
-  </a>
-  
-  <a href="#" className="nx-rounded-lg nx-border nx-border-gray-200 nx-p-3 nx-no-underline hover:nx-shadow-md nx-transition-shadow dark:nx-border-gray-800">
-    <span className="nx-text-xl">📺</span>
-    <span className="nx-text-sm nx-mt-1">MarketFitHQ</span>
+  <a href="https://www.linkedin.com/company/82822218" className="nx-rounded-lg nx-border nx-border-gray-200 nx-p-3 nx-no-underline hover:nx-shadow-md nx-transition-shadow dark:nx-border-gray-800">
+    <div className="nx-text-xl">💼 LinkedIn</div>
+    <div className="nx-text-sm nx-mt-1">Market Fit</div>
   </a>
 </div> 
