--- a/pages/company/roadmap.mdx
+++ b/pages/company/roadmap.mdx
@@ -1,5 +1,43 @@
 # Product Roadmap
 
+<style>{`
+  .summary-table {
+    width: 100%;
+    border-collapse: collapse;
+    background: rgba(255, 255, 255, 0.05);
+    border-radius: 12px;
+    overflow: hidden;
+    backdrop-filter: blur(10px);
+    margin: 1.5rem 0;
+  }
+  
+  .summary-table td {
+    padding: 1rem 1.5rem;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  }
+  
+  .summary-table td:first-child {
+    font-weight: 600;
+    background: rgba(0, 0, 0, 0.05);
+  }
+  
+  .summary-table tr:last-child td {
+    border-bottom: none;
+  }
+  
+  .dark .summary-table {
+    background: rgba(255, 255, 255, 0.05);
+  }
+  
+  .dark .summary-table td {
+    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+  }
+  
+  .dark .summary-table td:first-child {
+    background: rgba(255, 255, 255, 0.1);
+  }
+`}</style>
+
 ## Building the Future of AI-Powered Sales
 
 Our product roadmap is driven by our vision to democratize sales automation through AI, with a focus on performance-based revenue and campaign co-investment.
@@ -169,37 +207,22 @@ Our product roadmap is driven by our vision to democratize sales automation thro
 <div className="nx-mt-8 nx-rounded-lg nx-bg-gradient-to-r nx-from-blue-50 nx-to-purple-50 nx-p-6 dark:nx-from-blue-900/20 dark:nx-to-purple-900/20">
   <h3 className="nx-text-xl nx-font-semibold nx-mb-4">Major Platform Evolution</h3>
   
-  <div className="nx-space-y-3">
-    <div className="nx-flex nx-items-start nx-gap-3">
-      <span className="nx-text-blue-600 dark:nx-text-blue-400">🌍</span>
-      <div>
-        <h4 className="nx-font-medium">International Expansion</h4>
-        <span className="nx-text-sm nx-text-gray-600 dark:nx-text-gray-400">
-          Launch in LATAM, EU, and US markets with localized solutions
-        </span>
-      </div>
-    </div>
-    
-    <div className="nx-flex nx-items-start nx-gap-3">
-      <span className="nx-text-purple-600 dark:nx-text-purple-400">🧠</span>
-      <div>
-        <h4 className="nx-font-medium">Advanced AI Engine</h4>
-        <span className="nx-text-sm nx-text-gray-600 dark:nx-text-gray-400">
-          Next-gen AI for predictive sales and automated optimization
-        </span>
-      </div>
-    </div>
-    
-    <div className="nx-flex nx-items-start nx-gap-3">
-      <span className="nx-text-green-600 dark:nx-text-green-400">💎</span>
-      <div>
-        <h4 className="nx-font-medium">Enterprise Solutions</h4>
-        <span className="nx-text-sm nx-text-gray-600 dark:nx-text-gray-400">
-          Industry-specific solutions for SaaS, fintech, and healthcare
-        </span>
-      </div>
-    </div>
-  </div>
+  <table className="summary-table">
+    <tbody>
+      <tr>
+        <td><strong>🌍 International Expansion</strong></td>
+        <td>Launch in LATAM, EU, and US markets with localized solutions</td>
+      </tr>
+      <tr>
+        <td><strong>🧠 Advanced AI Engine</strong></td>
+        <td>Next-gen AI for predictive sales and automated optimization</td>
+      </tr>
+      <tr>
+        <td><strong>💎 Enterprise Solutions</strong></td>
+        <td>Industry-specific solutions for SaaS, fintech, and healthcare</td>
+      </tr>
+    </tbody>
+  </table>
 </div>
 
 ## Customer-Driven Development
@@ -207,24 +230,26 @@ Our product roadmap is driven by our vision to democratize sales automation thro
 <div className="nx-mt-8 nx-rounded-lg nx-border nx-border-gray-200 nx-p-6 dark:nx-border-gray-800">
   <h3 className="nx-text-lg nx-font-semibold nx-mb-4">How We Prioritize</h3>
   
-  <div className="nx-grid nx-grid-cols-1 nx-gap-4 md:nx-grid-cols-3">
-    <div className="nx-text-center">
-      <div className="nx-text-3xl nx-font-bold nx-text-primary-600">40%</div>
-      <span className="nx-text-sm nx-text-gray-600 dark:nx-text-gray-400">Revenue Share Optimization</span>
-    </div>
-    <div className="nx-text-center">
-      <div className="nx-text-3xl nx-font-bold nx-text-primary-600">35%</div>
-      <span className="nx-text-sm nx-text-gray-600 dark:nx-text-gray-400">Campaign Investment Tools</span>
-    </div>
-    <div className="nx-text-center">
-      <div className="nx-text-3xl nx-font-bold nx-text-primary-600">25%</div>
-      <span className="nx-text-sm nx-text-gray-600 dark:nx-text-gray-400">Platform Infrastructure</span>
-    </div>
-  </div>
+  <table className="summary-table">
+    <tbody>
+      <tr>
+        <td><strong>Revenue Share Optimization</strong></td>
+        <td>40% - Features that directly impact client success and revenue generation</td>
+      </tr>
+      <tr>
+        <td><strong>Campaign Investment Tools</strong></td>
+        <td>35% - Co-investment platform and ROI optimization features</td>
+      </tr>
+      <tr>
+        <td><strong>Platform Infrastructure</strong></td>
+        <td>25% - Scalability, security, and core platform improvements</td>
+      </tr>
+    </tbody>
+  </table>
   
-  <span className="nx-text-sm nx-text-gray-600 dark:nx-text-gray-400 nx-mt-4">
+  <p className="nx-text-sm nx-text-gray-600 dark:nx-text-gray-400 nx-mt-4">
     We maintain a public roadmap and gather continuous feedback through our Customer Advisory Board, user forums, and regular NPS surveys.
-  </span>
+  </p>
 </div>
 
 ## Join Our Journey
