--- a/pages/traction/revenue-growth.mdx
+++ b/pages/traction/revenue-growth.mdx
@@ -1,5 +1,43 @@
 # Revenue Growth
 
+<style>{`
+  .summary-table {
+    width: 100%;
+    border-collapse: collapse;
+    background: rgba(255, 255, 255, 0.05);
+    border-radius: 12px;
+    overflow: hidden;
+    backdrop-filter: blur(10px);
+    margin: 1.5rem 0;
+  }
+  
+  .summary-table td {
+    padding: 1rem 1.5rem;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  }
+  
+  .summary-table td:first-child {
+    font-weight: 600;
+    background: rgba(0, 0, 0, 0.05);
+  }
+  
+  .summary-table tr:last-child td {
+    border-bottom: none;
+  }
+  
+  .dark .summary-table {
+    background: rgba(255, 255, 255, 0.05);
+  }
+  
+  .dark .summary-table td {
+    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+  }
+  
+  .dark .summary-table td:first-child {
+    background: rgba(255, 255, 255, 0.1);
+  }
+`}</style>
+
 ## Executive Summary
 
 Market Fit has achieved exceptional revenue growth, scaling from $0 to $8.2M ARR in 18 months with a clear path to $25M ARR by end of 2025. Our growth is driven by strong product-market fit, efficient customer acquisition, and high retention rates.
@@ -7,38 +45,66 @@ Market Fit has achieved exceptional revenue growth, scaling from $0 to $8.2M ARR
 ## Historical Revenue Performance
 
 ### Revenue Milestones
-**Rapid Growth Trajectory**
+<table className="summary-table">
+  <tbody>
+    <tr>
+      <td><strong>💰 18-Month Growth</strong></td>
+      <td>$0 to $8.2M ARR</td>
+    </tr>
+    <tr>
+      <td><strong>📈 Average Monthly Growth</strong></td>
+      <td>28%</td>
+    </tr>
+    <tr>
+      <td><strong>🚀 Year-over-Year Growth</strong></td>
+      <td>340%</td>
+    </tr>
+    <tr>
+      <td><strong>⚡ Compound Annual Growth Rate</strong></td>
+      <td>1,580%</td>
+    </tr>
+  </tbody>
+</table>
 
-#### 2023 Performance
-- **Q1 2023**: $0 (Company founding)
-- **Q2 2023**: $45K ARR (First paying customers)
-- **Q3 2023**: $180K ARR (300% quarter-over-quarter growth)
-- **Q4 2023**: $520K ARR (189% quarter-over-quarter growth)
+### Revenue Composition by Product Line
+<table className="summary-table">
+  <tbody>
+    <tr>
+      <td><strong>Core AI Platform</strong></td>
+      <td>78% of revenue ($6.4M ARR)</td>
+    </tr>
+    <tr>
+      <td><strong>Premium Features</strong></td>
+      <td>14% of revenue ($1.1M ARR)</td>
+    </tr>
+    <tr>
+      <td><strong>Professional Services</strong></td>
+      <td>6% of revenue ($490K ARR)</td>
+    </tr>
+    <tr>
+      <td><strong>Partner Revenue</strong></td>
+      <td>2% of revenue ($164K ARR)</td>
+    </tr>
+  </tbody>
+</table>
 
-#### 2024 Performance
-- **Q1 2024**: $1.2M ARR (131% quarter-over-quarter growth)
-- **Q2 2024**: $2.8M ARR (133% quarter-over-quarter growth)
-- **Q3 2024**: $5.1M ARR (82% quarter-over-quarter growth)
-- **Q4 2024**: $8.2M ARR (61% quarter-over-quarter growth)
-
-#### Growth Metrics
-- **18-Month Growth**: From $0 to $8.2M ARR
-- **Average Monthly Growth**: 28%
-- **Year-over-Year Growth**: 340%
-- **Compound Annual Growth Rate**: 1,580%
-
-### Revenue Composition
-
-#### By Product Line
-- **Core AI Platform**: 78% of revenue ($6.4M ARR)
-- **Premium Features**: 14% of revenue ($1.1M ARR)
-- **Professional Services**: 6% of revenue ($490K ARR)
-- **Partner Revenue**: 2% of revenue ($164K ARR)
-
-#### By Customer Segment
-- **Enterprise (1000+ employees)**: 67% of revenue ($5.5M ARR)
-- **Mid-Market (100-999 employees)**: 28% of revenue ($2.3M ARR)
-- **SMB (10-99 employees)**: 5% of revenue ($410K ARR)
+### Revenue by Customer Segment
+<table className="summary-table">
+  <tbody>
+    <tr>
+      <td><strong>Enterprise (1000+ employees)</strong></td>
+      <td>67% of revenue ($5.5M ARR)</td>
+    </tr>
+    <tr>
+      <td><strong>Mid-Market (100-999 employees)</strong></td>
+      <td>28% of revenue ($2.3M ARR)</td>
+    </tr>
+    <tr>
+      <td><strong>SMB (10-99 employees)</strong></td>
+      <td>5% of revenue ($410K ARR)</td>
+    </tr>
+  </tbody>
+</table>
 
 #### By Geography
 - **United States**: 82% of revenue ($6.7M ARR)
